Compile for Java 8 so plugins on older server JVMs can shade it
The library targeted Java 17, which ruled it out for Minecraft plugins that still support Java 8 runtimes. Nothing in it actually needed 17: records become final classes with accessors (BoundField, ConfigSchema), instanceof pattern matching becomes explicit casts, var becomes explicit types, List.of/List.copyOf become Collections helpers, isBlank becomes trim().isEmpty(), String.repeat becomes a loop, and Files.readString/writeString become readAllBytes/write. snakeyaml 2.2 is already Java 7 bytecode so it shades in cleanly.

Only compileJava targets 8; compileTestJava stays on 17 so the tests can keep using modern syntax. The published Gradle metadata now advertises org.gradle.jvm.version 8, which is what lets Java 8 consumers resolve it.

Also documents the Java 8 target in the README, alongside some pending formatting fixes to the code fences.